--- a/.github/workflows/onNewVersion.yml
+++ b/.github/workflows/onNewVersion.yml
@@ -21,8 +21,8 @@ jobs:
         uses: dsaltares/fetch-gh-release-asset@master
         with:
           #version: tags/${{ env.RELEASE }}          
-          file: SetupStanagPlayerSDK.Net.zip
-          target: SetupStanagPlayerSDK.Net.zip
+          file: SetupStanagInjectorSDK.Net.zip
+          target: SetupStanagInjectorSDK.Net.zip
           # token: ${{ secrets.DEPLOY_TOKEN }}
 
       - run: echo "🖥️ The version is ready to be uploaded."
@@ -30,14 +30,14 @@ jobs:
         run: |
           tree ${{ github.workspace }}
 
-      - name: 📂 Upload MISBCoreSdk to ImpleoTV FTP
+      - name: 📂 Upload SetupStanagInjectorSDK.Net to ImpleoTV FTP
         uses: SamKirkland/FTP-Deploy-Action@4.1.0
         with:
           server: ftp.impleotv.com
           username: sw@impleotv.com
           password: ${{ secrets.FTP_IMPLEO_SW }}
           local-dir: ./
-          server-dir: stanag-player-sdk/
+          server-dir: klvinjectorsdk/
 
       - name: Setup NodeJs 14.x
         uses: actions/setup-node@v1
